# chat_bot

./: .env.example  .gitignore  RAG_TEXTBOOK.md  README.md  basic.md  check_gpu.sh  docker-compose.prod.yml  docker-compose.yaml  nginx.conf
backend/: dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py
backend/app/api/routes/: chat.py  collections.py  documents.py
backend/app/core/ingestion/: markdown.py  pdf.py  text.py
backend/app/core/providers/: base.py  gemini.py  ollama.py
backend/app/core/rag/: generator.py  pipeline.py  retriever.py
backend/app/core/vectorstore/: chroma.py
backend/app/db/: metadata.py
backend/app/models/: chunk.py
backend/tests/: test_chroma_vectorstore.py  test_markdown_chunker.py  test_providers.py  test_rag_pipeline.py  test_text_chunker.py
frontend/: index.html
widget/: vite.config.ts
widget/src/: ChatWidget.tsx
